[tool.poetry]
name = "sample-202205"
version = "0.1.0"
description = ""
authors = ["Teppei Nakano <teppei@iflab.tokyo>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
